--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.sys.ini
@@ -40,6 +40,8 @@ SOBI_TPL_OVERRIDE="Template Override"
 SOBI_TPL_OVERRIDE_EXPL="You can select an individual template for this link"
 SP.SELECT_TEMPLATE_OVERRIDE="Select Template"
 SP.TASK_LIST.USER="User Listing"
+SP.TASK_LIST.DATE="Listing by Date"
+SOBI_SELECTED_DATE="Selected Date"
 
 SOBIPRO="SobiPro"
 COM_SOBIPRO="SobiPro"
@@ -56,3 +58,5 @@ SP.SOBI_SELECT_CATEGORY="Select Category"
 SP.SOBI_SELECT_CATEGORY_EXPL="You can optionally select the target category"
 SOBI_USER_LISTING="User Listing"
 SOBI_USER_LISTING_EXPL="List of 'my' entries"
+SOBI_DATE_LISTING="Listing by date"
+SOBI_DATE_LISTING_EXPL="List of entries created within a certain time period"
