--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -43,6 +43,13 @@ SP.ENTRY_MANAGE_DELETE="Delete Entry"
 SP.UL.TITLE="var:[user]'s entries"
 SP.UL.PATH_TITLE="var:[user]'s entries"
 
+SP.DL.PATH_TITLE_YEAR="Entries added in year var:[year]"
+SP.DL.PATH_TITLE_MONTH="Entries added in var:[month] of var:[year]"
+SP.DL.PATH_TITLE_DAY="Entries added at var:[date]"
+SP.DL.TITLE_YEAR="Entries added in year var:[year]"
+SP.DL.TITLE_MONTH="Entries added in var:[month] of year var:[year]"
+SP.DL.TITLE_DAY="Entries added at var:[date]"
+
 
 SP.START_UPLOAD="Upload"
 SP.FILE_UPLOADED="File \"%s\" has been uploaded."
