search results second order random

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -26,7 +26,7 @@ SP.SECOND_ORDER_DISABLED="Disabled"
 SP.SECN.CFG.SEARCH_SETTINGS_ORDER="Second Entries Ordering"
 SP.PERMISSIONS.DELETE_*="delete any"
 SP.PERMISSIONS.DELETE_OWN="delete own"
-
+SP.ORDER_BY_RANDOM="Random"
 
 ;=========
 ; SobiPro 1.1
