--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -27,6 +27,7 @@ SP.SECN.CFG.SEARCH_SETTINGS_ORDER="Second Entries Ordering"
 SP.PERMISSIONS.DELETE_*="delete any"
 SP.PERMISSIONS.DELETE_OWN="delete own"
 SP.ORDER_BY_RANDOM="Random"
+SP.FMN.FREE_RANGE="Free Range Input"
 
 ;=========
 ; SobiPro 1.1
