--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -28,6 +28,8 @@ SP.PERMISSIONS.DELETE_*="delete any"
 SP.PERMISSIONS.DELETE_OWN="delete own"
 SP.ORDER_BY_RANDOM="Random"
 SP.FMN.FREE_RANGE="Free Range Input"
+SP.FM.URL.COUNT_CLICKS="Count Clicks"
+SP.FM.URL.COUNTER_TO_LABEL="Add Counter to Label"
 
 ;=========
 ; SobiPro 1.1
