--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -49,7 +49,7 @@ SP.DL.PATH_TITLE_DAY="Entries added at var:[date]"
 SP.DL.TITLE_YEAR="Entries added in year var:[year]"
 SP.DL.TITLE_MONTH="Entries added in var:[month] of year var:[year]"
 SP.DL.TITLE_DAY="Entries added at var:[date]"
-
+SP.FM.URL.COUNTER_WITH_LABEL="var:[label] (visited var:[counter] times)"
 
 SP.START_UPLOAD="Upload"
 SP.FILE_UPLOADED="File \"%s\" has been uploaded."
