Tree layout additional sorting criteria for entries

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -237,6 +237,11 @@ SP.EMN.ORDER_BY_APPROVAL_ASC="Not approved first"
 SP.EMN.ORDER_BY_APPROVAL_DESC="Approved first"
 SP.EMN.ORDER_BY_ORDER_ASC="Position ascending"
 SP.EMN.ORDER_BY_ORDER_DESC="Position descending"
+SP.EMN_ORDER_BY_CREATION_DATE_ASC="Oldest first"
+SP.EMN_ORDER_BY_CREATION_DATE_DESC="Newest first"
+SP.EMN_ORDER_BY_UPDATE_DATE_ASC="Least recently modified first"
+SP.EMN_ORDER_BY_UPDATE_DATE_DESC="Recently modified first"
+
 SP.EMN.ORDER_BY_FIELD="By Field"
 SP.EMN.ORDER_BY_FIELD_ASC="ascending"
 SP.EMN.ORDER_BY_FIELD_DESC="descending"
