--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -30,6 +30,7 @@ SP.ORDER_BY_RANDOM="Random"
 SP.FMN.FREE_RANGE="Free Range Input"
 SP.FM.URL.COUNT_CLICKS="Count Clicks"
 SP.FM.URL.COUNTER_TO_LABEL="Add Counter to Label"
+SP.FORCE_TPL_UPDATE="Or click to <a href='%s'>force template update</a>"
 
 ;=========
 ; SobiPro 1.1
