--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -34,7 +34,7 @@ SP.FORCE_TPL_UPDATE="Or click to <a href='%s'>force template update</a>"
 SP.SECN.CFG.REDIRECT_ENTRY_INFO="Please notice that this redirect will work only if:  <ul><li>This is a new entry</li><li>There was no payment after new entry has been added</li><li>This entry is not published</li><li>The particular user has no permission to see unpublished entries</li></ul>"
 SP.SEC.CFG.REDIRECTS_TO_PARENT_CATEGORY="Redirect to parent category"
 SP.PERMISSIONS.SEARCH_*="use search function"
-
+SP.GB.CFG.XML_ACCELERATOR="XML Optimisation"
 ;=========
 ; SobiPro 1.1
 ;=========
