new configuration settings revised

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -31,7 +31,7 @@ SP.FMN.FREE_RANGE="Free Range Input"
 SP.FM.URL.COUNT_CLICKS="Count Clicks"
 SP.FM.URL.COUNTER_TO_LABEL="Add Counter to Label"
 SP.FORCE_TPL_UPDATE="Or click to <a href='%s'>force template update</a>"
-SP.SECN.CFG.REDIRECT_ENTRY_INFO="Please notice that this redirect will work only if:  <ul><li>This is a new entry</li><li>There was no payment after new entry has been added</li><li>This entry is not published</li><li>The particular user has no permission to see unpublished entries</li></ul>"
+SP.SECN.CFG.REDIRECT_ENTRY_INFO="Please notice that this redirection will work only if:  <ul><li>the entry is a new entry</li><li>there is no payment page after the new entry has been added</li><li>the entry is not published automatically</li><li>and the particular user has no permission to see unpublished entries</li></ul>This means, only if a free entry is added from a user which have no rights to see unpublished entries and the entry is not automatically published, this redirection will work. In all other cases it cannot work as it would destroy the necessary sequence."
 SP.SEC.CFG.REDIRECTS_TO_PARENT_CATEGORY="Redirect to parent category"
 SP.PERMISSIONS.SEARCH_*="use search function"
 SP.GB.CFG.XML_ACCELERATOR="XML Optimisation"
@@ -151,6 +151,7 @@ SP.FMN.FIELD_ENTRYINPUT_PAYMENT="Payment Settings"
 SP.FMN.FIELD_ENTRYINPUT_EDITS="Edit Settings"
 SP.FMN.FIELD_ENTRYINPUT_HTML="HTML Settings"
 SP.FMN.FIELD_ENTRYINPUT_URLTITLE="Title Settings"
+SP.FMN.FIELD_ENTRYINPUT_URLCOUNTER="Click Counter Settings"
 SP.FMN.IS_REQUIRED="Required"
 SP.FMN.IS_EDITABLE="Editable"
 SP.FMN.IS_SEARCHABLE="Searchable"
