--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -74,7 +74,7 @@ SP.CREATED_BY_IP="IP"
 SP.MODIFIED_AT="Last modified on"
 SP.MODIFIED_BY="Last modified by"
 SP.MODIFIED_BY_IP="IP"
-SP.CLICKCOUNTER="Click Counter"
+SP.CLICKCOUNTER="Hits Counter"
 SP.KEYS="Keys"
 SP.DESCRIPTION="Description"
 SP.ROBOTS="Robots"
