requirements - checking if MySQL qchache is enabled

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -1079,6 +1079,10 @@ SP.REQ.WEB_SERVER_VERSION_NAME="Name and Version"
 SP.REQ.TIDY_NOT_AVAILABLE="Tidy - HTML clean and repair utility is not available. It's not a tragedy but it would be helpful to have it."
 SP.REQ.TIDY_AVAILABLE="Tidy - HTML clean and repair utility available"
 SP.REQ.TIDY="Tidy HTML"
+SP.REQ.MYSQL_CACHE="MySQL Query Cache"
+SP.REQ.MYSQL_CACHE_NOT_AVAILABLE="MySQL Query Cache is disabled"
+SP.REQ.MYSQL_CACHE_AVAILABLE="MySQL Query Cache is enabled"
+SP.REQ.MYSQL_CACHE_CANNOT_CHECK="Cannot check if MySQL Query Cache is enabled"
 
 ;=========
 ; Entry
