(+) Possibility to disable pre-load of "en-GB" language files

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -68,6 +68,7 @@ Legend:
    (+) Possibility to define new permission to allow or disallow search function usage
    (+) Custom redirect for accessing search function without permission
    (+) Implemented XML optimisation method. Created XML output is stored into a XML file and if there was no changes reused in next request
+   (+) Possibility to disable pre-load of "en-GB" language files
 
    (-) Vehicles template removed; will be a separate template now
    (-) SobiPro Admin Menu Module removed; sections available now on a menu list
