--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -35,6 +35,8 @@ SP.SECN.CFG.REDIRECT_ENTRY_INFO="Please notice that this redirection will work o
 SP.SEC.CFG.REDIRECTS_TO_PARENT_CATEGORY="Redirect to parent category"
 SP.PERMISSIONS.SEARCH_*="use search function"
 SP.GB.CFG.XML_ACCELERATOR="XML Optimisation"
+SP.GB.CFG.ENGB_PRELOAD="Enable en-GB pre-load"
+
 ;=========
 ; SobiPro 1.1
 ;=========
