(#) Missing the section/category title in the page navigation URL

--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -108,6 +108,7 @@ Legend:
    (#) Not possible to transform url paths in CSS cache if more than one url per line
    (#) Column count doesn't match value while installing a new payment App
    (#) Workaround for non-latin characters in alpha index for problems in strtoupper
+   (#) Missing the section/category title in the page navigation URL
 
 
 -------------------
