(+) Current site number to the browser title

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -42,6 +42,7 @@ SP.ENTRY_MANAGE_DELETE="Delete Entry"
 
 SP.UL.TITLE="var:[user]'s entries"
 SP.UL.PATH_TITLE="var:[user]'s entries"
+SP.SITES_COUNTER="Site %d from %d"
 
 SP.DL.PATH_TITLE_YEAR="Entries added in year var:[year]"
 SP.DL.PATH_TITLE_MONTH="Entries added in var:[month] of var:[year]"
