--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -69,6 +69,7 @@ Legend:
    (+) Custom redirect for accessing search function without permission
    (+) Implemented XML optimisation method. Created XML output is stored into a XML file and if there was no changes reused in next request
    (+) Possibility to disable pre-load of "en-GB" language files
+   (+) Current site number to the browser title
 
    (-) Vehicles template removed; will be a separate template now
    (-) SobiPro Admin Menu Module removed; sections available now on a menu list
