XML for visitors only

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
@@ -30,8 +30,8 @@ SP.JS_CACHE_ENABLED="JavaScript Cache is enabled."
 SP.JS_CACHE_DISABLED="JavaScript Cache is disabled."
 SP.CSS_CACHE_ENABLED="CSS Cache is enabled."
 SP.CSS_CACHE_DISABLED="CSS Cache is disabled."
-SP.DISPLAY_ERRORS_ENABLED="Displaying errors is disabled."
-SP.DISPLAY_ERRORS_DISABLED="Displaying errors is enabled."
+SP.DISPLAY_ERRORS_ENABLED="Displaying errors is enabled."
+SP.DISPLAY_ERRORS_DISABLED="Displaying errors is disabled."
 SP.DEBUG_LEVEL_TOO_HIGH="Debug level is too high for a live site."
 SP.DEBUG_LEVEL_OK="Debug level is correct."
 SP.DEBUG_XML_ENABLED="XML output is enabled."
