URL - reset clicks counter

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.ini
@@ -51,6 +51,7 @@ SP.DL.TITLE_YEAR="Entries added in year var:[year]"
 SP.DL.TITLE_MONTH="Entries added in var:[month] of year var:[year]"
 SP.DL.TITLE_DAY="Entries added at var:[date]"
 SP.FM.URL.COUNTER_WITH_LABEL="var:[label] (visited var:[counter] times)"
+SP.FM.URL.EDIT_CLICKS="Visited %d times - click to reset"
 
 SP.START_UPLOAD="Upload"
 SP.FILE_UPLOADED="File \"%s\" has been uploaded."
