--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.js.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.js.ini
@@ -33,3 +33,4 @@ SP.JS_FD_TEXTAREA_LIMIT="You can input a maximum of var:[max_length] chars into 
 SP.JS_FCC_LIMIT_REACHED="You can add an entry maximal up to %d categories"
 SP.JS_ATTENTION="Attention!"
 SP.JS_CONFIRM_DELETE_ENTRY="Are you sure you want to delete this entry?"
+SP.JS_CONFIRM_URL_COUNT_RESET="Are you sure you want to reset the counter?"
