--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -20,24 +20,6 @@
 ; $Author$
 ; $HeadURL$
 
-SP.TB.SECTIONS="Sections"
-SP.SEC.CFG.SEARCH_SETTINGS="Search Settings"
-SP.SECOND_ORDER_DISABLED="Disabled"
-SP.SECN.CFG.SEARCH_SETTINGS_ORDER="Second Entries Ordering"
-SP.PERMISSIONS.DELETE_*="delete any"
-SP.PERMISSIONS.DELETE_OWN="delete own"
-SP.ORDER_BY_RANDOM="Random"
-SP.FMN.FREE_RANGE="Free Range Input"
-SP.FM.URL.COUNT_CLICKS="Count Clicks"
-SP.FM.URL.COUNTER_TO_LABEL="Add Counter to Label"
-SP.FORCE_TPL_UPDATE="Or click to <a href='%s'>force template update</a>"
-SP.SECN.CFG.REDIRECT_ENTRY_INFO="Please notice that this redirection will work only if:  <ul><li>the entry is a new entry</li><li>there is no payment page after the new entry has been added</li><li>the entry is not published automatically</li><li>and the particular user has no permission to see unpublished entries</li></ul>This means, only if a free entry is added from a user which have no rights to see unpublished entries and the entry is not automatically published, this redirection will work. In all other cases it cannot work as it would destroy the necessary sequence."
-SP.SEC.CFG.REDIRECTS_TO_PARENT_CATEGORY="Redirect to parent category"
-SP.PERMISSIONS.SEARCH_*="use search function"
-SP.GB.CFG.XML_ACCELERATOR="XML Optimisation"
-SP.GB.CFG.XML_ACCELERATOR_NO_REG="XML Opt. for Visitors Only"
-SP.GB.CFG.ENGB_PRELOAD="Enable en-GB pre-load"
-
 ;=========
 ; SobiPro 1.1
 ;=========
@@ -67,6 +49,7 @@ SP.STATUS_ERROR="Error"
 SP.STATUS_SUCCESS="Success"
 
 ; Toolbar
+SP.TB.SECTIONS="Sections"
 SP.TB.SAVE_ONLY="Save"
 SP.TB.SAVE_EXIT="Save &amp; Exit"
 SP.TB.SAVE_NEW="Save as New"
@@ -182,6 +165,8 @@ SP.FMN.URL.TITLE_MAX_LENGTH="max. Length"
 SP.FMN.URL.TITLE_FILTER="Filter"
 SP.FMN.URL.VALIDATE_URL="Validate (CURL required)"
 SP.FMN.URL.ALLOWED_PROTO="Protocols"
+SP.FM.URL.COUNT_CLICKS="Count Clicks"
+SP.FM.URL.COUNTER_TO_LABEL="Add Counter to Label"
 SP.FMN.RADIO.DEFSEL="Default Option"
 SP.FMN.IMG.MAX_FILE_SIZE="max. File Size"
 SP.FMN.IMG.IMAGE_SAVE_PATH="Path"
@@ -194,6 +179,7 @@ SP.FM.OPTIONS="all"
 SP.FMN.LENGTH_CHAR="chars"
 SP.FMN.LENGTH_ROWS="rows"
 SP.FMN.LENGTH_BYTES="bytes"
+SP.FMN.FREE_RANGE="Free definable Input"
 
 ; Category Chooser
 SP.FMN.CC_TREE="SigsiuTree"
@@ -368,6 +354,12 @@ SP.SECN.CFG.ENTRY_ORDER_BY_EXPIRATION_DATE_DESC="Expires next last"
 SP.SECN.ADD_SECTION_NAME="Name"
 SP.SECN.ADD_SECTION_ALIAS="Alias"
 
+;;; Search
+SP.SEC.CFG.SEARCH_SETTINGS="Search Settings"
+SP.SECOND_ORDER_DISABLED="Disabled"
+SP.SECN.CFG.SEARCH_SETTINGS_ORDER="Second Entries Ordering"
+SP.ORDER_BY_RANDOM="Random"
+
 ;;; Alpha Listing
 SP.SECN.CFG.SHOW_ALPHA_MENU="Menu"
 SP.SECN.CFG.SHOW_ALPHA_VERIFY="Verify Links"
@@ -392,6 +384,8 @@ SP.SECN.CFG.REDIRECTS_SECTION_SPACER="Section Main View"
 SP.SECN.CFG.REDIRECTS_SEARCH_SPACER="Search Form"
 SP.SECN.CFG.REDIRECTS_INPUT="Entry Input Form"
 SP.SECN.CFG.REDIRECTS_SAVE="Save Entry Input"
+SP.SECN.CFG.REDIRECT_ENTRY_INFO="Please notice that this redirection will work only if:  <ul><li>the entry is a new entry</li><li>there is no payment page after the new entry has been added</li><li>the entry is not published automatically</li><li>and the particular user has no permission to see unpublished entries</li></ul>This means, only if a free entry is added from a user which have no rights to see unpublished entries and the entry is not automatically published, this redirection will work. In all other cases it cannot work as it would destroy the necessary sequence."
+SP.SEC.CFG.REDIRECTS_TO_PARENT_CATEGORY="Redirect to parent category"
 
 ;; Security
 SP.SECN.CFG.SECURITY_SETTINGS="Security"
@@ -409,7 +403,7 @@ SP.GBN.CFG.INCLUDE_JS_FILES_CACHE="Javascript Files"
 SP.GBN.CFG.INCLUDE_CSS_FILES_CACHE="CSS Files"
 SP.GBN.CFG.COMPRESS_FILES="Compression"
 SP.GBN.CFG.COMPRESS_JS_FILES="Javascript Files"
-SP.GBN.CFG.ACCEL="<strong>Heads up!</strong> SobiPro has its own cache system for better performance. It is highly recommended to switch the SobiPro Data Accelerator on.<br/>In order to use the SobiPro Data Accelerator, you need SQLite installed on your server!"
+SP.GBN.CFG.ACCEL="<strong>Heads up!</strong> SobiPro has its own cache system for better performance.<br /><br />It is highly recommended to switch the SobiPro Data Accelerator on. In order to use the SobiPro Data Accelerator, you need SQLite installed on your server!<br/><br/>All SobiPro caches use intelligent techniques to recognise changes. There is no need to switch them off."
 SP.GBN.CFG.HTML_INPUT="Predefined Security Settings"
 SP.GBN.CFG.PBY_SUPPORT="Development Support"
 SP.GBN.CFG.PBY_EXPL="<strong>Heads up!</strong> If you disable the 'powered by' link from our SobiPro component, it is fair to donate for it. Developing and maintaining SobiPro is a lot of work which should be recompensed adequately.<br /><br /><a title='Donate for SobiPro' target='_blank' class='btn' href='http://sobi.it/SobiPro/Donate/'>Donate for SobiPro</a> Click on the button to donate via Paypal. Thank you."
@@ -418,7 +412,10 @@ SP.GBN.CFG.PMN_VAT="Tax / VAT"
 SP.GBN.CFG.PMN_DEC_POINT="Decimal Mark"
 SP.FLR.MSG_FILTER_SAVED="All changes saved!"
 SP.FLR.MSG_FILTER_DELETED="Input filter has been deleted."
-
+SP.GB.CFG.XML_ACCELERATOR="XML View"
+SP.GB.CFG.XML_ACCELERATOR_YES="Cached"
+SP.GB.CFG.XML_ACCELERATOR_NO_REG="For Visitors only"
+SP.GB.CFG.ENGB_PRELOAD="'en-GB' Preload"
 
 ; Applications Installer/Repository
 SP.EXTENSIONS.HEADER_VERSION="Version"
@@ -440,6 +437,7 @@ SP.PROGRESS_WORKING="Working ..."
 SP.CMSEX_INSTALLED="Extension (%s) \"%s\" has been installed."
 SP.EX.INSTALL="Install Application:"
 SP.EX.DEL_REPO_ERROR="Cannot delete repository definition."
+SP.FORCE_TPL_UPDATE="Or click to <a href='%s'>force template update</a>"
 
 ; Template
 SP.TP.VER="Version"
@@ -465,6 +463,10 @@ SP.ACL_PERMISSION_TAB="Permissions"
 SP.ACL_PUBLISHING="Validity"
 SP.ACL_RULE_SAVED="ACL rule has been saved."
 SP.ACL_ENABLED="Enabled"
+SP.PERMISSIONS.DELETE_*="delete any"
+SP.PERMISSIONS.DELETE_OWN="delete own"
+SP.PERMISSIONS.SEARCH_*="use search function"
+
 
 ; seemingly unused
 ;;;SP.FMN_ORDER_BY="Order by"
