Visitor to XML cache!!!

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -1201,7 +1201,7 @@ SP.AMN.APPS_SECTION_TPL="Section Template"
 SP.AMN.APPS="Applications"
 SP.EX.SECTION="Application Manager"
 SP.EX.SECTION_EXPL="You can activate or deactivate here applications listed below for the &#34;var:[section]&#34; section."
-SP.UPD.UPDATE_AVAILABLE="New version %s is available"Entry Position Changed
+SP.UPD.UPDATE_AVAILABLE="New version %s is available"
 SP.UPD.UP_TO_DATE="Current version is up to date"
 SP.APP.BANK_TRANSFER="Bank Payment"
 SP.APP.PAYPAL="PayPal Payment"
