XML opt. als Status fehlt

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.messages.ini
@@ -26,6 +26,8 @@ SP.WARNING.ENTRIES_BASE_DATA_INCOMPLETE="<b>Warning</b>: Some entries are missin
 SP.WARNING.EX.MSG_UPDATE_FIRST="The list of available applications is not available. Click on the 'Fetch Updates' button to get the list."
 SP.ACCELERATOR_ENABLED="SobiPro Data Accelerator is enabled."
 SP.ACCELERATOR_DISABLED="SobiPro Data Accelerator is disabled."
+SP.XML_CACHE_ENABLED="XML Cache is enabled."
+SP.XML_CACHE_DISABLED="XML Cache is disabled."
 SP.JS_CACHE_ENABLED="JavaScript Cache is enabled."
 SP.JS_CACHE_DISABLED="JavaScript Cache is disabled."
 SP.CSS_CACHE_ENABLED="CSS Cache is enabled."
