SigsiuTree in Category and Edit entry screen; addition height parameter in field settings (0=no height set)

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/site/en-GB.com_sobipro.err.ini
@@ -28,6 +28,7 @@ SP.CANNOT_CREATE_DIR="Cannot create directory at %s."
 SP.FILTER_NOT_FOUND="Filter cannot be found."
 SP.FIELD_TEXTAREA_LIMIT="You can input a maximum of %d chars into %s field but the current length is %d."
 SP.INVALID_DATE_GIVEN="Invalid date given"
+SP.MISSING_CAT="Category missing! Have you added a category field to the section?"
 
 ;=========
 ; SobiPro 1.0.1
