--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -28,7 +28,7 @@ Legend:
 
 
 -------------------
-1.1.0 (Alpha M)
+1.1.0 (Alpha N)
 -------------------
 
    (+) XML based template engine for administrator templates
