--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -112,6 +112,9 @@ Legend:
    (#) Column count doesn't match value while installing a new payment App
    (#) Workaround for non-latin characters in alpha index for problems in strtoupper
    (#) Missing the section/category title in the page navigation URL
+   (#) Wrong date used while submitting new entry for the createdTime (GMT instead of server time)
+   (#) Wrong date used while saving an entry for the updatedTime (GMT instead of server time)
+   (#) Wrong date used while saving an entry for the validUntil (GMT instead of server time)
 
 
 -------------------
