No text for user listing and date listing menus Bug #798

--- a/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
+++ b/Component/branches/SobiPro-1.1/Site/usr/locale/adm/en-GB.com_sobipro.ini
@@ -578,6 +578,10 @@ SP.SELECT_CATEGORY="Select Category"
 SP.SELECT_SECTION="Select section"
 SP.SECTIONS="Sections"
 COM_SOBIPRO="SobiPro"
+SOBI_USER_LISTING="User Listing"
+SOBI_USER_LISTING_EXPL="List of 'my' entries"
+SOBI_DATE_LISTING="Listing by date"
+SOBI_DATE_LISTING_EXPL="List of entries created within a certain time period"
 
 ;=========
 ; Adm Menu
