--- a/Component/branches/SobiPro-1.1/Site/changelog.txt
+++ b/Component/branches/SobiPro-1.1/Site/changelog.txt
@@ -73,6 +73,7 @@ Legend:
    (+) Current page number of pagination to the browser title
    (+) Added full text indexes to fields' data and language table
    (+) Search priority to XML results
+   (+) Possibility to define different template methods (see default template) to plug-in an action between (and whilst) the submit and save entry actions
 
    (-) Vehicles template removed; will be a separate template now
    (-) SobiPro Admin Menu Module removed; sections available now on a menu list
